# ollen-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pytest.ini  requirements.txt
backend/: app.py  pyproject.toml  requirements.txt
backend/config/eval/: example.yaml  golden.yaml
backend/config/prompts/: keywords.yaml  rag_answer_it.yaml
backend/src/: exceptions.py  mcp_server.py  prompts.py  settings.py
backend/src/api/: onboarding.py  routes.py
backend/src/config/: restart.py
backend/src/factories/: chunker.py
backend/src/providers/: __init__.py
backend/src/providers/embeddings/: fastembed.py
backend/src/providers/llm/: __init__.py
backend/src/providers/reranker/: __init__.py  litellm.py
backend/src/providers/vector_stores/: __init__.py  opensearch.py  qdrant.py
backend/src/rag/: evaluation.py  ingestion.py  onboarding.py  retrieval.py  visualize.py
backend/tests/: test_api.py  test_embeddings_factory.py  test_embeddings_litellm.py  test_generation.py  test_infra_opensearch.py  test_infra_qdrant.py  test_integration.py  test_integration_litellm.py  test_llm_factory.py  test_model_catalog.py  test_onboarding.py  test_opensearch_backend.py  test_qdrant_backend.py  test_settings_api.py  test_similarity_threshold.py  test_topic_parser.py  test_visualize.py
config/: embedding_models.yaml  reranker_models.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/: exceptions.py  logger.py  mcp_server.py  settings.py
tests/: conftest.py  test_api.py  test_chroma_backend.py  (+27 more)
(+135 files in other folders)
