[project]
name = "ollen-rag"
version = "0.1.0"
description = "Provider-agnostic RAG microservice (REST + MCP) with a React console."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.49.0",
  "python-multipart>=0.0.26",
  "fastmcp==3.4.2",
  "pydantic-settings==2.14.2",
  "llama-index-core==0.14.23",
  "llama-index-vector-stores-opensearch==1.2.0",
  "llama-index-vector-stores-chroma==0.5.5",
  "chromadb==1.5.9",
  "llama-index-llms-ibm==0.7.0.post1",
  "llama-index-embeddings-ibm==0.6.0.post1",
  "litellm==1.91.1",
  "llama-index-node-parser-topic",
  "fastembed==0.8.0",
  "liteparse==2.4.0",
  "sentence-transformers==5.6.0",
  "httpx==0.28.1",
  "PyYAML==6.0.3",
]

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio>=1.3",
]

# Application layout (app.py + src/), not an installable library package.
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: requires a running OpenSearch (docker compose up)",
]
addopts = "-m \"not integration\""
